<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.natty-parser</groupId>
  <artifactId>natty</artifactId>
  <packaging>jar</packaging>

  <version>1.1.0-SNAPSHOT</version>

  <name>Natty Date Parser</name>
  <description>natural language date parser</description>
  <url>https://github.com/natty-parser/natty</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:${project.scm.url}.git</connection>
    <developerConnection>scm:git:${project.scm.url}.git</developerConnection>
    <url>https://github.com/natty-parser/natty</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <id>mccartney</id>
      <name>Greg Oledzki</name>
      <url>http://github.com/mccartney</url>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>1</timezone>
    </developer>
  </developers>

  <properties>
    <grammar.dir>${basedir}/src/main/antlr3/org/natty/generated</grammar.dir>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <additionalparam>-Xdoclint:none</additionalparam>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <build>
    <defaultGoal>install</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.8.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <autoPublish>true</autoPublish>
          <waitUntil>published</waitUntil>
        </configuration>
      </plugin>

      <!-- need to force a new version of the release plugin for git support-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <mavenExecutorId>forked-path</mavenExecutorId>
        </configuration>
      </plugin>

      <!-- compiler plugin -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
      </plugin>

      <!-- clean plugin -->
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>src/main/java/org/natty/generated</directory>
              <includes>
                <include>**/*.java</include>
              </includes>
              <followSymlinks>false</followSymlinks>
            </fileset>
          </filesets>
        </configuration>
      </plugin>

      <!-- ANTLR code generation plugin -->
      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>antlr3-maven-plugin</artifactId>
        <version>3.5.3</version>

        <executions>
          <execution>
            <id>debug</id>
            <goals>
              <goal>antlr</goal>
            </goals>
            <configuration>
              <debug>true</debug>
              <libDirectory>src/main/antlr3/org/natty/generated/imports</libDirectory>
              <outputDirectory>src/main/java</outputDirectory>
              <includes>
                <include>org/natty/generated/DateLexer.g</include>
                <include>org/natty/generated/DateParser.g</include>
              </includes>
              <excludes>
                <exclude>org/natty/generated/imports/NumericRules.g</exclude>
              </excludes>
            </configuration>
          </execution>

          <execution>
            <id>non-debug</id>
            <goals>
              <goal>antlr</goal>
            </goals>
            <configuration>
              <debug>false</debug>
              <outputDirectory>src/main/java</outputDirectory>
              <libDirectory>src/main/antlr3/org/natty/generated/imports</libDirectory>
              <excludes>
                <exclude>org/natty/generated/DateLexer.g</exclude>
                <exclude>org/natty/generated/DateParser.g</exclude>
                <exclude>org/natty/generated/imports/NumericRules.g</exclude>
              </excludes>
            </configuration>
          </execution>

        </executions>
      </plugin>

      <!-- gUnit plugin -->
      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>maven-gunit-plugin</artifactId>
        <version>3.5.3</version>
        <executions>
          <execution>
            <id>maven-gunit-plugin</id>
            <phase>test</phase>
            <goals>
              <goal>gunit</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <!-- release profile -->
  <profiles>
    <profile>
      <id>release</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>

          <!-- sign artifacts -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.11.2</version>
            <configuration>

            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <!-- dependencies -->
  <dependencies>
    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr-runtime</artifactId>
      <version>3.5.3</version>
    </dependency>

    <dependency>
      <groupId>org.mnode.ical4j</groupId>
      <artifactId>ical4j</artifactId>
      <version>4.1.1</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.17</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.18</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>gunit</artifactId>
      <version>3.5.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.17.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
